# tinygpus

./: .gitattributes  .gitmodules  README.md
.github/workflows/: github-actions-embed-code.yml
demos/: Makefile
demos/data/: .gitignore  Makefile  get_data.sh  pre.si  pre_load_level.lua  pre_pack_textures.lua  pre_select_textures.lua  pre_textures.lua  pre_utils.lua  pre_wad.lua  pre_write_level_h.lua
demos/doomchip-onice/: doomchip-onice.c
demos/interleaved/: interleaved.c
demos/q5k/: .gitignore  Makefile  q5k.c  walk.py
demos/q5k/emul/: emul_quake.cpp
demos/q5k/qrepack/: CMakeLists.txt  palette.pal  qrepack.cc  tga.h
demos/quake/: quake.c
demos/quake/emul/: CMakeLists.txt  emul_quake.cpp
demos/standalone/: data-lcd-init.txt  frame.nfo  monitor_send.py
demos/terrain/: terrain.c
demos/tetrahedron/: tetrahedron.c
demos/triangles/: triangles.c
demos/triangles/emul/: test1.cpp  test2.cpp  test6.cpp  tga.cpp
docs/: DMC-1-walkthrough.md
hardware/GPUs/dmc-1/: DrawCommands.md  Makefile  command_queue.si  dmc-1-standalone.si  dmc-1.si  parallel_screen.si  screen.si  spi_screen.si
hardware/SOCs/ice40-dmc-1/: Makefile  bram_spram_32bits.si  soc-ice40-dmc-1-risc_v.si
hardware/SOCs/ice40-dmc-1-standalone/: Makefile  simul_cmd_queue.lua  soc-ice40-dmc-1-standalone.si
hardware/common/: .gitignore  Makefile  download_all.sh
software/api/: api.c  col_to_alpha_table.h  frustum.c  oled.h  raster.c  sine_table.h  spiflash.h
software/boot/: boot.c
software/compile/ice40/: Makefile  compile.sh  compile_boot.sh  compile_c.sh  config_c_swirl.ld  crt0.s  (+3 more)
